# csc8114

./: .gitignore  README.md
code/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.yaml  data_download.py  docker-compose.client.yml  docker-compose.server.yml  docker-compose.yml  matrix.yaml  pyproject.toml  split_learning_dev_guide.md  test.py  test_fedavg_partial.py  test_split_forward.py
code/ansible/: deploy_client.yml  inventory.ini  inventory.taisale.ini
code/ansible/group_vars/: clients.yml
code/docs/: CHANGE_LOG.md  EXPERIMENT_REPORT_GUIDE.md  EXPERIMENT_STORAGE_GUIDE.md  LEARNING_PLAN.md  MEETING_APR_22.md  Meeting — April 22, 2026 Updates.md  PROJECT_HIGHLIGHTS.md  RUNBOOK.md  SYSTEM_ARCHITECTURE.md  makefile_guide.md  metrics_reference.md  split_learning_dev_guide.md
code/documents/: CHANGE_LOG.md  EXPERIMENT_REPORT_GUIDE.md  PROJECT_HIGHLIGHTS.md  SPLIT_LEARNING_DEV_GUIDE.md
code/proto/: fsl.proto
code/scripts/: classify_client_weights.py  cleanup_progress.py  flatten_for_report.py  organize_by_seed.py  rename_seed_dirs.py
code/src/: CHANGE_LOG.md
code/src/client/: checkpointing.py  data_pipeline.py  forward_step.py  latency_generator.py  reporting.py  scheduler_state.py  sync.py  training_loop.py
code/src/data/: batch_run_evaluation.py  build_matrix_summary.py  check_rain.py  data_download.py  data_download_openmeteo.py  data_preprocessing.py  dataloader.py  generate_matrix_report.py  merge_distributed_results.py  plot_compression_auprc.py  plot_confusion_matrix.py  plot_efficiency_accuracy.py  plot_monthly_performance.py  (+10 more)
(+26 files in other folders)
